Fixed weird container alignment issue with portfolio.html

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -81,6 +81,7 @@ p:last-child {
 .footer {
     border-top: 8px solid #F4B49C;
     background-color: #fef2ec;
+    margin-top: 20px;
 }
 
 /* Contact Page */
